# TrackerBots

./: .gitignore  LICENSE.md  README.md
ACRA_2018/: Calculate_Investigate_Area.m  Extract_Alt_From_Table.m  Main_Program.m  Readme.md  Run_SITL.md  demo_function.m  gen_model.m  gen_truth.m
ACRA_2018/Analyze_Results/: Analyze_RMSFound_With_Height_Change.m  Analyze_RSSI_Distance.m  Analyze_RSSI_vs_Distance_func.m  Analyze_SMC_Results.m  Analyze_SMC_Results_Loop.m  Combine_Indepent_MC_Results.m  Combine_and_Analyze_RSSI__vs_Distance.m  Non_Linear_Fit_Power_vs_Distance.m  Nonlinear_Fit_Measurement_Model.m  Read_Pulses_From_Controller_Log.m  Report_Results.m  (+5 more)
IROS_2020/: Plot_Target_Estimated_Position.m  Readme.md  add_paths.m  demo.m  run_pf_filter.m
JoFR/: Main_Program.m  Readme.md  Run_RealDrone.md  Run_SITL.md  gen_model.m  run_filter.m
JoFR_2019/: Edison-Deploying.md  Readme.md  gen_truth.m
animal_detector/: Cargo.toml
common/: Cargo.toml
io_proxy/: Cargo.toml  README.md
pulse_server/: Cargo.toml  README.md
pulse_server/config/: hackrf.json  task.json  test.json
pulse_server/src/: main.rs  server.rs  types.rs
pulse_server/src/task/: airspy_task.rs  hackrf_task.rs  mod.rs  test_task.rs
services/: copy.sh  disable.sh  enable.sh  ioproxy.service  mavproxy.service  pulse_server.service  telemetry_host.service
telemetry_host/: Cargo.toml  README.md  Rocket.toml  config.json  config_sim_hoa.json  log.txt
telemetry_host/src/: api.rs  ipc.rs  main.rs  types.rs
telemetry_host/src/connection/: drone.rs  globals.rs  logger.rs  mod.rs  pulse_server.rs
(+342 files in other folders)
