[package]
name = "pulse_server"
version = "0.2.0"
authors = ["Michael Chesser"]

[dependencies]
byteorder = "1.2.7"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
airspy = { git = "https://github.com/mchesser/rust-airspy" }
hackrf = { git = "https://github.com/mchesser/rust-hackrf" }
animal_detector = { path = "../animal_detector" }
common = { path = "../common" }
