[package]
name = "telemetry_host"
version = "0.1.0"
authors = ["Michael Chesser"]

[dependencies]
byteorder = "1.2.7"
chrono = "0.4.6"
common = { path = "../common" }
crossbeam-utils = "0.6.1"
lazy_static = "1.2.0"
mavlink = "0.4.2"
regex = "1.1.0"
rocket = "0.4.0-rc.2"
rocket_contrib = "0.4.0-rc.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
